welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Boolean(false)
 required: String
  var vuBiscuit : String = false
                           ^Program:6: error: type mismatch;
 found   : Boolean(true)
 required: String
      vuBiscuit = true
                  ^Program:12: error: type mismatch;
 found   : Boolean(true)
 required: String
      vuBiscuit = true
                  ^Program:14: error: type mismatch;
 found   : String
 required: Boolean
  if (vuBiscuit) {
      ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
  for (l <- 1 to 6){
         ^